--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,13 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.8",
+    "@types/react-router-dom": "^5.3.3",
+    "antd": "^5.24.2",
+    "framer-motion": "^12.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.2.0",
+    "react-spinners": "^0.15.0",
     "tailwindcss": "^4.0.8"
   },
   "devDependencies": {
