--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint --ext .ts src",
-    "dev": "nodemon src/server.ts"
+    "dev": "nodemon src/server.ts",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
@@ -20,7 +21,9 @@
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.1",
-    "nodemailer": "^6.10.0"
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.10.0",
+    "rotating-file-stream": "^3.2.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
@@ -29,6 +32,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^22.13.5",
     "@types/nodemailer": "^6.4.17",
     "@typescript-eslint/eslint-plugin": "^8.25.0",
