--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint --ext .ts src",
-    "start": "node src/server.ts",
+    "start": "node dist/index.js",
     "dev": "nodemon src/server.ts",
     "build": "tsc"
   },
