--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint --ext .ts src",
-    "start": "node src/server.ts",
-    "dev": "nodemon src/server.ts",
+    "start": "ts-node src/server.ts",
+    "dev": "nodemon --exec ts-node src/server.ts",
     "build": "tsc"
   },
   "keywords": [],
